---
source: tool/src/kotlin/mod.rs
expression: result
---
package dev.diplomattest.somelib;
import com.sun.jna.Callback
import com.sun.jna.Library
import com.sun.jna.Native
import com.sun.jna.Pointer
import com.sun.jna.Structure

internal interface AnotherOpaqueLib: Library {
    fun AnotherOpaque_destroy(handle: Pointer)
    fun AnotherOpaque_get_rust_owned_bytes(handle: Pointer, a: Slice, b: Slice): Pointer
}

class AnotherOpaque internal constructor (
    internal val handle: Pointer,
    // These ensure that anything that is borrowed is kept alive and not cleaned
    // up by the garbage collector.
    internal val selfEdges: List<Any>,
    internal var owned: Boolean,
)  {

    init {
        if (this.owned) {
            this.registerCleaner()
        }
    }

    private class AnotherOpaqueCleaner(val handle: Pointer, val lib: AnotherOpaqueLib) : Runnable {
        override fun run() {
            lib.AnotherOpaque_destroy(handle)
        }
    }
    private fun registerCleaner() {
        CLEANER.register(this, AnotherOpaque.AnotherOpaqueCleaner(handle, AnotherOpaque.lib));
    }

    companion object {
        internal val libClass: Class<AnotherOpaqueLib> = AnotherOpaqueLib::class.java
        internal val lib: AnotherOpaqueLib = Native.load("somelib", libClass)
    }
    
    fun getRustOwnedBytes(a: UByteArray, b: UByteArray): RustOwnedBytes {
        val aSliceMemory = PrimitiveArrayTools.borrow(a)
        val bSliceMemory = PrimitiveArrayTools.borrow(b)
        
        val returnVal = lib.AnotherOpaque_get_rust_owned_bytes(handle, aSliceMemory.slice, bSliceMemory.slice);
        try {
            val selfEdges: List<Any> = listOf()
            val handle = returnVal 
            val returnOpaque = RustOwnedBytes(handle, selfEdges, true)
            return returnOpaque
        } finally {
            aSliceMemory.close()
            bSliceMemory.close()
        }
    }

}
